data/derived/comb/progs/unify/prog4733.ml.out
Characters 14-15:
  let f b = f = x;;
                ^
Error: This expression has type int but an expression was expected of type
         int -> int * bool
